# LocalChatbot

./: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.node.json
src/: App.tsx  index.css  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: README.md
src-tauri/src/: chunker.rs  db.rs  documents.rs  embeddings.rs  main.rs  vector_store.rs
src-tauri/src/commands/: mod.rs
src/components/chat/: ChatInput.tsx  ChatMessage.tsx  MessageList.tsx  TypingIndicator.tsx
src/components/layout/: AppSidebar.tsx  ChatHeader.tsx  MainLayout.tsx  ThemeToggle.tsx
src/components/settings/: SettingsModal.tsx
src/components/sidebar/: ChatHistory.tsx  DocumentList.tsx  IndexStatus.tsx
src/contexts/: ThemeContext.tsx
src/hooks/: useChat.ts  useDocuments.ts  useEmbedding.ts  useSettings.ts
src/pages/: Index.tsx
src/types/: index.ts
