[package]
name = "local-chatbot"
version = "0.1.0"
description = "A privacy-focused AI knowledge assistant"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
# SQLite for chat history persistence
rusqlite = { version = "0.32", features = ["bundled"] }
# Unique ID generation for chats/messages
uuid = { version = "1.11", features = ["v4"] }
# Date/time handling
chrono = { version = "0.4", features = ["serde"] }
# PDF text extraction
pdf-extract = "0.7"
# File dialog plugin for Tauri
tauri-plugin-dialog = "2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
