[package]
name = "local-chatbot"
version = "0.1.0"
description = "A privacy-focused AI knowledge assistant"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
# SQLite for chat history persistence
rusqlite = { version = "0.32", features = ["bundled"] }
# Unique ID generation for chats/messages
uuid = { version = "1.11", features = ["v4"] }
# Date/time handling
chrono = { version = "0.4", features = ["serde"] }
# PDF text extraction
pdf-extract = "0.7"
# File dialog plugin for Tauri
tauri-plugin-dialog = "2"

# Embedding model support (candle ML framework)
candle-core = "0.8"
candle-nn = "0.8"
candle-transformers = "0.8"
# Hugging Face Hub for downloading models
hf-hub = { version = "0.4", features = ["tokio"] }
# Tokenizer for text preprocessing
tokenizers = "0.21"
# Cross-platform directories (cache, config, etc.)
dirs = "5"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
